kubernetes/cache/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cache
  labels:
    app.kubernetes.io/part-of: fifa-cicd-platform
